--- a/assets/rheinklang-theme.css
+++ b/assets/rheinklang-theme.css
@@ -8,6 +8,7 @@
     --card-border-color: #1f1f1f;
     --down-border-left-color: #eb3b5a;
     --down-background-color: #ffd0d2;
+    --down-color-color: #c46d81;
     --degraded-border-left-color: #f7b731;
     --up-border-left-color: #7FAF42;
     --tag-color: #ffffff;
